--- a/todo.html
+++ b/todo.html
@@ -304,8 +304,19 @@ flatpickr(".flatpickr", {
 <script>
 
 document.getElementById("add_todo").onclick = function (){
-
-  var title = document.getElementById('todo_title').value
+  var escapeJsHTML = function (str) {
+    return str
+            .replace(/\\/g, '\\\\')
+            .replace(/'/g, "\\'")
+            .replace(/"/g, '\\"')
+            .replace(/\//g, '\\/')
+            .replace(/</g, '\\x3c')
+            .replace(/>/g, '\\x3e')
+            .replace(/(0x0D)/g, '\r')
+            .replace(/(0x0A)/g, '\n')
+            .replace(/&/g, '&amp;');
+  };
+  var title = escapeJsHTML(document.getElementById('todo_title').value)
 
   console.log(title.length)
   if(title){
